--- a/static/manifest.json
+++ b/static/manifest.json
@@ -25,7 +25,7 @@
           "sizes": "512x512"
         }
     ],
-    "start_url": "/static/",
+    "start_url": "/",
     "display": "standalone",
     "orientation": "portrait"
   }
