--- a/.gcloudignore
+++ b/.gcloudignore
@@ -18,3 +18,10 @@ __pycache__/
 .gitignore
 # Ignored by the build system
 /setup.cfg
+
+#ignore tailwind API node modules
+/node_modules
+/package-lock.json
+/package.json
+/postcss.config.js
+/tailwind.config.js
